// Vitest Snapshot v1

exports[`Overlay > Overlay baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      基础用法
      
    </span>
  </button>
  <transition-stub
    appear="false"
    css="true"
    name="t-overlay"
    persisted="true"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
  </transition-stub>
  
</div>
`;

exports[`Overlay > Overlay mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Overlay 遮罩层
  </h1>
  <p
    class="summary"
  >
    通过遮罩层，可以强调部分内容
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础遮罩层
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="demo-block"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            基础用法
            
          </span>
        </button>
        <transition-stub
          appear="false"
          css="true"
          name="t-overlay"
          persisted="true"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
        
      </div>
      
    </div>
  </div>
</div>
`;
